# Computer-Graphics-competition

./: CMakeLists.txt  main.cpp
resources/terrain_tracks/: scene.gltf
